# multiarchi-bot

./: .gitignore  Cargo.toml  commands.md
migrations/: 20250819151009_init.sql  20250913014113_tracker.sql  20250917074949_public.sql  20250921100208_unclaimed.sql  20250921113515_claim-fix.sql  20250922043737_points.sql  20250923065834_cleanup.sql  20250923080359_cancel-preclaims.sql  20250923083050_worlds.sql  20250923103549_sheets.sql  20251005170622_points-change.sql  20251016191536_realities.sql  20251016204200_realities-fix.sql  20251106182504_anti-horde.sql  20251112220243_transfer-points.sql  20251122044156_claim-timestamp.sql  20251222134928_external-realities.sql
src/: autocomplete.rs  cancel_preclaims.rs  channels.rs  claim.rs  claimed.rs  done.rs  finish_world.rs  get_preclaims.rs  main.rs  mark_free.rs  new_world.rs  paginate.rs  public.rs  report.rs  reschedule_preclaims.rs  scrape.rs  sheets.rs  status.rs  status_report.rs  track_world.rs  unclaim.rs  unclaimed.rs  util.rs  view_preclaims.rs  worlds.rs
src/commands/: bulk_status.rs  cancel_preclaims.rs  claim.rs  claimed.rs  done.rs  find.rs  finish_world.rs  get_preclaims.rs  mark_free.rs  mod.rs  new_reality.rs  new_world.rs  public.rs  register_commands.rs  reschedule_preclaims.rs  status.rs  status_report.rs  track_world.rs  transfer_points.rs  unclaim.rs  unclaimed.rs  unpreclaim.rs  view_preclaims.rs  worlds.rs
