[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12.4"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros"]}
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
rand = "0.8.5"
rand_distr = "0.4.3"
dotenvy = "0.15.7"
reqwest = "0.12.23"
scraper = "0.24.0"
phf = { version = "0.13.1", features = ["macros"] }
google-sheets4 = "6.0.0"
hyper = "1.7.0"
hyper-rustls = "0.27.7"
serde = "1.0.226"
serde_json = "1.0.145"
yup-oauth2 = "12.1.0"
http-body-util = "0.1.3"
rustls = "0.23.32"
